// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateInput correctly applies the theme context className 1`] = `
<ThemeContextProvider
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  theme={
    Object {
      "className": "clinical-lowlight-theme",
    }
  }
>
  <InjectIntl(DateInput)
    name="date-input"
    value="2000-07-04"
  >
    <DateInput
      dayAttributes={Object {}}
      disabled={false}
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": null,
          "now": [Function],
          "onError": [Function],
          "textComponent": "span",
          "timeZone": null,
        }
      }
      monthAttributes={Object {}}
      name="date-input"
      onBlur={null}
      onChange={null}
      value="2000-07-04"
      yearAttributes={Object {}}
    >
      <div
        className="date-input clinical-lowlight-theme"
      >
        <input
          name="date-input"
          type="hidden"
          value="2000-07-04"
        />
        <div
          className="month-select-wrapper"
        >
          <select
            aria-label="Terra.date.input.monthLabel"
            className="month-select"
            disabled={false}
            name="terra-date-month-date-input"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            value="07"
          >
            <option
              hidden={true}
              value=""
            >
              Terra.date.input.monthPlaceholder
            </option>
            <option
              key="Terra.date.input.january"
              value="01"
            >
              Terra.date.input.january
            </option>
            <option
              key="Terra.date.input.february"
              value="02"
            >
              Terra.date.input.february
            </option>
            <option
              key="Terra.date.input.march"
              value="03"
            >
              Terra.date.input.march
            </option>
            <option
              key="Terra.date.input.april"
              value="04"
            >
              Terra.date.input.april
            </option>
            <option
              key="Terra.date.input.may"
              value="05"
            >
              Terra.date.input.may
            </option>
            <option
              key="Terra.date.input.june"
              value="06"
            >
              Terra.date.input.june
            </option>
            <option
              key="Terra.date.input.july"
              value="07"
            >
              Terra.date.input.july
            </option>
            <option
              key="Terra.date.input.august"
              value="08"
            >
              Terra.date.input.august
            </option>
            <option
              key="Terra.date.input.september"
              value="09"
            >
              Terra.date.input.september
            </option>
            <option
              key="Terra.date.input.october"
              value="10"
            >
              Terra.date.input.october
            </option>
            <option
              key="Terra.date.input.november"
              value="11"
            >
              Terra.date.input.november
            </option>
            <option
              key="Terra.date.input.december"
              value="12"
            >
              Terra.date.input.december
            </option>
          </select>
        </div>
        <Input
          aria-label="Terra.date.input.dayLabel"
          autoComplete="off"
          className="date-input-day"
          disabled={false}
          isIncomplete={false}
          isInvalid={false}
          maxLength="2"
          name="terra-date-day-date-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          pattern="\\\\d*"
          placeholder="Terra.date.input.dayPlaceholder"
          refCallback={[Function]}
          required={false}
          size="2"
          type="text"
          value="04"
        >
          <input
            aria-label="Terra.date.input.dayLabel"
            autoComplete="off"
            className="form-input date-input-day"
            disabled={false}
            maxLength="2"
            name="terra-date-day-date-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            pattern="\\\\d*"
            placeholder="Terra.date.input.dayPlaceholder"
            required={false}
            size="2"
            type="text"
            value="04"
          />
        </Input>
        <Input
          aria-label="Terra.date.input.yearLabel"
          autoComplete="off"
          className="date-input-year"
          disabled={false}
          isIncomplete={false}
          isInvalid={false}
          maxLength="4"
          name="terra-date-year-date-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          pattern="\\\\d*"
          placeholder="Terra.date.input.yearPlaceholder"
          refCallback={[Function]}
          required={false}
          size="4"
          type="text"
          value="2000"
        >
          <input
            aria-label="Terra.date.input.yearLabel"
            autoComplete="off"
            className="form-input date-input-year"
            disabled={false}
            maxLength="4"
            name="terra-date-year-date-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            pattern="\\\\d*"
            placeholder="Terra.date.input.yearPlaceholder"
            required={false}
            size="4"
            type="text"
            value="2000"
          />
        </Input>
      </div>
    </DateInput>
  </InjectIntl(DateInput)>
</ThemeContextProvider>
`;

exports[`DateInput should not have duplicate ids on the page when multiple date inputs are initialized 1`] = `
<div
  intl="[object Object]"
>
  <div
    class="date-input"
  >
    <input
      name="date-input"
      type="hidden"
      value=""
    />
    <div
      class="month-select-wrapper"
    >
      <select
        aria-label="Terra.date.input.monthLabel"
        class="month-select is-placeholder"
        name="terra-date-month-date-input"
      >
        <option
          hidden=""
          selected=""
          value=""
        >
          Terra.date.input.monthPlaceholder
        </option>
        <option
          value="01"
        >
          Terra.date.input.january
        </option>
        <option
          value="02"
        >
          Terra.date.input.february
        </option>
        <option
          value="03"
        >
          Terra.date.input.march
        </option>
        <option
          value="04"
        >
          Terra.date.input.april
        </option>
        <option
          value="05"
        >
          Terra.date.input.may
        </option>
        <option
          value="06"
        >
          Terra.date.input.june
        </option>
        <option
          value="07"
        >
          Terra.date.input.july
        </option>
        <option
          value="08"
        >
          Terra.date.input.august
        </option>
        <option
          value="09"
        >
          Terra.date.input.september
        </option>
        <option
          value="10"
        >
          Terra.date.input.october
        </option>
        <option
          value="11"
        >
          Terra.date.input.november
        </option>
        <option
          value="12"
        >
          Terra.date.input.december
        </option>
      </select>
    </div>
    <input
      aria-label="Terra.date.input.dayLabel"
      autocomplete="off"
      class="form-input date-input-day"
      maxlength="2"
      name="terra-date-day-date-input"
      pattern="\\\\d*"
      placeholder="Terra.date.input.dayPlaceholder"
      size="2"
      type="text"
      value=""
    />
    <input
      aria-label="Terra.date.input.yearLabel"
      autocomplete="off"
      class="form-input date-input-year"
      maxlength="4"
      name="terra-date-year-date-input"
      pattern="\\\\d*"
      placeholder="Terra.date.input.yearPlaceholder"
      size="4"
      type="text"
      value=""
    />
  </div>
  <div
    class="date-input"
  >
    <input
      name="date-input-2"
      type="hidden"
      value=""
    />
    <div
      class="month-select-wrapper"
    >
      <select
        aria-label="Terra.date.input.monthLabel"
        class="month-select is-placeholder"
        name="terra-date-month-date-input-2"
      >
        <option
          hidden=""
          selected=""
          value=""
        >
          Terra.date.input.monthPlaceholder
        </option>
        <option
          value="01"
        >
          Terra.date.input.january
        </option>
        <option
          value="02"
        >
          Terra.date.input.february
        </option>
        <option
          value="03"
        >
          Terra.date.input.march
        </option>
        <option
          value="04"
        >
          Terra.date.input.april
        </option>
        <option
          value="05"
        >
          Terra.date.input.may
        </option>
        <option
          value="06"
        >
          Terra.date.input.june
        </option>
        <option
          value="07"
        >
          Terra.date.input.july
        </option>
        <option
          value="08"
        >
          Terra.date.input.august
        </option>
        <option
          value="09"
        >
          Terra.date.input.september
        </option>
        <option
          value="10"
        >
          Terra.date.input.october
        </option>
        <option
          value="11"
        >
          Terra.date.input.november
        </option>
        <option
          value="12"
        >
          Terra.date.input.december
        </option>
      </select>
    </div>
    <input
      aria-label="Terra.date.input.dayLabel"
      autocomplete="off"
      class="form-input date-input-day"
      maxlength="2"
      name="terra-date-day-date-input-2"
      pattern="\\\\d*"
      placeholder="Terra.date.input.dayPlaceholder"
      size="2"
      type="text"
      value=""
    />
    <input
      aria-label="Terra.date.input.yearLabel"
      autocomplete="off"
      class="form-input date-input-year"
      maxlength="4"
      name="terra-date-year-date-input-2"
      pattern="\\\\d*"
      placeholder="Terra.date.input.yearPlaceholder"
      size="4"
      type="text"
      value=""
    />
  </div>
  <div
    class="date-input"
  >
    <input
      name="date-input-3"
      type="hidden"
      value=""
    />
    <div
      class="month-select-wrapper"
    >
      <select
        aria-label="Terra.date.input.monthLabel"
        class="month-select is-placeholder"
        name="terra-date-month-date-input-3"
      >
        <option
          hidden=""
          selected=""
          value=""
        >
          Terra.date.input.monthPlaceholder
        </option>
        <option
          value="01"
        >
          Terra.date.input.january
        </option>
        <option
          value="02"
        >
          Terra.date.input.february
        </option>
        <option
          value="03"
        >
          Terra.date.input.march
        </option>
        <option
          value="04"
        >
          Terra.date.input.april
        </option>
        <option
          value="05"
        >
          Terra.date.input.may
        </option>
        <option
          value="06"
        >
          Terra.date.input.june
        </option>
        <option
          value="07"
        >
          Terra.date.input.july
        </option>
        <option
          value="08"
        >
          Terra.date.input.august
        </option>
        <option
          value="09"
        >
          Terra.date.input.september
        </option>
        <option
          value="10"
        >
          Terra.date.input.october
        </option>
        <option
          value="11"
        >
          Terra.date.input.november
        </option>
        <option
          value="12"
        >
          Terra.date.input.december
        </option>
      </select>
    </div>
    <input
      aria-label="Terra.date.input.dayLabel"
      autocomplete="off"
      class="form-input date-input-day"
      maxlength="2"
      name="terra-date-day-date-input-3"
      pattern="\\\\d*"
      placeholder="Terra.date.input.dayPlaceholder"
      size="2"
      type="text"
      value=""
    />
    <input
      aria-label="Terra.date.input.yearLabel"
      autocomplete="off"
      class="form-input date-input-year"
      maxlength="4"
      name="terra-date-year-date-input-3"
      pattern="\\\\d*"
      placeholder="Terra.date.input.yearPlaceholder"
      size="4"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`DateInput should render a date input with a default date 1`] = `
<div
  className="date-input"
>
  <input
    name="date-input"
    type="hidden"
    value="2000-07-04"
  />
  <div
    className="month-select-wrapper"
  >
    <select
      aria-label="Terra.date.input.monthLabel"
      className="month-select"
      disabled={false}
      name="terra-date-month-date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      value="07"
    >
      <option
        hidden={true}
        value=""
      >
        Terra.date.input.monthPlaceholder
      </option>
      <option
        key="Terra.date.input.january"
        value="01"
      >
        Terra.date.input.january
      </option>
      <option
        key="Terra.date.input.february"
        value="02"
      >
        Terra.date.input.february
      </option>
      <option
        key="Terra.date.input.march"
        value="03"
      >
        Terra.date.input.march
      </option>
      <option
        key="Terra.date.input.april"
        value="04"
      >
        Terra.date.input.april
      </option>
      <option
        key="Terra.date.input.may"
        value="05"
      >
        Terra.date.input.may
      </option>
      <option
        key="Terra.date.input.june"
        value="06"
      >
        Terra.date.input.june
      </option>
      <option
        key="Terra.date.input.july"
        value="07"
      >
        Terra.date.input.july
      </option>
      <option
        key="Terra.date.input.august"
        value="08"
      >
        Terra.date.input.august
      </option>
      <option
        key="Terra.date.input.september"
        value="09"
      >
        Terra.date.input.september
      </option>
      <option
        key="Terra.date.input.october"
        value="10"
      >
        Terra.date.input.october
      </option>
      <option
        key="Terra.date.input.november"
        value="11"
      >
        Terra.date.input.november
      </option>
      <option
        key="Terra.date.input.december"
        value="12"
      >
        Terra.date.input.december
      </option>
    </select>
  </div>
  <Input
    aria-label="Terra.date.input.dayLabel"
    autoComplete="off"
    className="date-input-day"
    disabled={false}
    isIncomplete={false}
    isInvalid={false}
    maxLength="2"
    name="terra-date-day-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="Terra.date.input.dayPlaceholder"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value="04"
  />
  <Input
    aria-label="Terra.date.input.yearLabel"
    autoComplete="off"
    className="date-input-year"
    disabled={false}
    isIncomplete={false}
    isInvalid={false}
    maxLength="4"
    name="terra-date-year-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="Terra.date.input.yearPlaceholder"
    refCallback={[Function]}
    required={false}
    size="4"
    type="text"
    value="2000"
  />
</div>
`;

exports[`DateInput should render a date input with custom attributes 1`] = `
<div
  className="date-input"
  inputAttributes={
    Object {
      "id": "terra-date-input",
    }
  }
>
  <input
    name="date-input"
    type="hidden"
    value=""
  />
  <div
    className="month-select-wrapper"
  >
    <select
      aria-label="Terra.date.input.monthLabel"
      className="month-select is-placeholder"
      disabled={false}
      name="terra-date-month-date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      value=""
    >
      <option
        hidden={true}
        value=""
      >
        Terra.date.input.monthPlaceholder
      </option>
      <option
        key="Terra.date.input.january"
        value="01"
      >
        Terra.date.input.january
      </option>
      <option
        key="Terra.date.input.february"
        value="02"
      >
        Terra.date.input.february
      </option>
      <option
        key="Terra.date.input.march"
        value="03"
      >
        Terra.date.input.march
      </option>
      <option
        key="Terra.date.input.april"
        value="04"
      >
        Terra.date.input.april
      </option>
      <option
        key="Terra.date.input.may"
        value="05"
      >
        Terra.date.input.may
      </option>
      <option
        key="Terra.date.input.june"
        value="06"
      >
        Terra.date.input.june
      </option>
      <option
        key="Terra.date.input.july"
        value="07"
      >
        Terra.date.input.july
      </option>
      <option
        key="Terra.date.input.august"
        value="08"
      >
        Terra.date.input.august
      </option>
      <option
        key="Terra.date.input.september"
        value="09"
      >
        Terra.date.input.september
      </option>
      <option
        key="Terra.date.input.october"
        value="10"
      >
        Terra.date.input.october
      </option>
      <option
        key="Terra.date.input.november"
        value="11"
      >
        Terra.date.input.november
      </option>
      <option
        key="Terra.date.input.december"
        value="12"
      >
        Terra.date.input.december
      </option>
    </select>
  </div>
  <Input
    aria-label="Terra.date.input.dayLabel"
    autoComplete="off"
    className="date-input-day"
    disabled={false}
    isIncomplete={false}
    isInvalid={false}
    maxLength="2"
    name="terra-date-day-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="Terra.date.input.dayPlaceholder"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value=""
  />
  <Input
    aria-label="Terra.date.input.yearLabel"
    autoComplete="off"
    className="date-input-year"
    disabled={false}
    isIncomplete={false}
    isInvalid={false}
    maxLength="4"
    name="terra-date-year-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="Terra.date.input.yearPlaceholder"
    refCallback={[Function]}
    required={false}
    size="4"
    type="text"
    value=""
  />
</div>
`;

exports[`DateInput should render a date input with onBlur 1`] = `
<div
  className="date-input"
>
  <input
    name="date-input"
    type="hidden"
    value=""
  />
  <div
    className="month-select-wrapper"
  >
    <select
      aria-label="Terra.date.input.monthLabel"
      className="month-select is-placeholder"
      disabled={false}
      name="terra-date-month-date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      value=""
    >
      <option
        hidden={true}
        value=""
      >
        Terra.date.input.monthPlaceholder
      </option>
      <option
        key="Terra.date.input.january"
        value="01"
      >
        Terra.date.input.january
      </option>
      <option
        key="Terra.date.input.february"
        value="02"
      >
        Terra.date.input.february
      </option>
      <option
        key="Terra.date.input.march"
        value="03"
      >
        Terra.date.input.march
      </option>
      <option
        key="Terra.date.input.april"
        value="04"
      >
        Terra.date.input.april
      </option>
      <option
        key="Terra.date.input.may"
        value="05"
      >
        Terra.date.input.may
      </option>
      <option
        key="Terra.date.input.june"
        value="06"
      >
        Terra.date.input.june
      </option>
      <option
        key="Terra.date.input.july"
        value="07"
      >
        Terra.date.input.july
      </option>
      <option
        key="Terra.date.input.august"
        value="08"
      >
        Terra.date.input.august
      </option>
      <option
        key="Terra.date.input.september"
        value="09"
      >
        Terra.date.input.september
      </option>
      <option
        key="Terra.date.input.october"
        value="10"
      >
        Terra.date.input.october
      </option>
      <option
        key="Terra.date.input.november"
        value="11"
      >
        Terra.date.input.november
      </option>
      <option
        key="Terra.date.input.december"
        value="12"
      >
        Terra.date.input.december
      </option>
    </select>
  </div>
  <Input
    aria-label="Terra.date.input.dayLabel"
    autoComplete="off"
    className="date-input-day"
    disabled={false}
    isIncomplete={false}
    isInvalid={false}
    maxLength="2"
    name="terra-date-day-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="Terra.date.input.dayPlaceholder"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value=""
  />
  <Input
    aria-label="Terra.date.input.yearLabel"
    autoComplete="off"
    className="date-input-year"
    disabled={false}
    isIncomplete={false}
    isInvalid={false}
    maxLength="4"
    name="terra-date-year-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="Terra.date.input.yearPlaceholder"
    refCallback={[Function]}
    required={false}
    size="4"
    type="text"
    value=""
  />
</div>
`;

exports[`DateInput should render a date input with onChange 1`] = `
<div
  className="date-input"
>
  <input
    name="date-input"
    type="hidden"
    value=""
  />
  <div
    className="month-select-wrapper"
  >
    <select
      aria-label="Terra.date.input.monthLabel"
      className="month-select is-placeholder"
      disabled={false}
      name="terra-date-month-date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      value=""
    >
      <option
        hidden={true}
        value=""
      >
        Terra.date.input.monthPlaceholder
      </option>
      <option
        key="Terra.date.input.january"
        value="01"
      >
        Terra.date.input.january
      </option>
      <option
        key="Terra.date.input.february"
        value="02"
      >
        Terra.date.input.february
      </option>
      <option
        key="Terra.date.input.march"
        value="03"
      >
        Terra.date.input.march
      </option>
      <option
        key="Terra.date.input.april"
        value="04"
      >
        Terra.date.input.april
      </option>
      <option
        key="Terra.date.input.may"
        value="05"
      >
        Terra.date.input.may
      </option>
      <option
        key="Terra.date.input.june"
        value="06"
      >
        Terra.date.input.june
      </option>
      <option
        key="Terra.date.input.july"
        value="07"
      >
        Terra.date.input.july
      </option>
      <option
        key="Terra.date.input.august"
        value="08"
      >
        Terra.date.input.august
      </option>
      <option
        key="Terra.date.input.september"
        value="09"
      >
        Terra.date.input.september
      </option>
      <option
        key="Terra.date.input.october"
        value="10"
      >
        Terra.date.input.october
      </option>
      <option
        key="Terra.date.input.november"
        value="11"
      >
        Terra.date.input.november
      </option>
      <option
        key="Terra.date.input.december"
        value="12"
      >
        Terra.date.input.december
      </option>
    </select>
  </div>
  <Input
    aria-label="Terra.date.input.dayLabel"
    autoComplete="off"
    className="date-input-day"
    disabled={false}
    isIncomplete={false}
    isInvalid={false}
    maxLength="2"
    name="terra-date-day-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="Terra.date.input.dayPlaceholder"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value=""
  />
  <Input
    aria-label="Terra.date.input.yearLabel"
    autoComplete="off"
    className="date-input-year"
    disabled={false}
    isIncomplete={false}
    isInvalid={false}
    maxLength="4"
    name="terra-date-year-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="Terra.date.input.yearPlaceholder"
    refCallback={[Function]}
    required={false}
    size="4"
    type="text"
    value=""
  />
</div>
`;

exports[`DateInput should render a date input with onFocus 1`] = `
<div
  className="date-input"
>
  <input
    name="date-input"
    type="hidden"
    value=""
  />
  <div
    className="month-select-wrapper"
  >
    <select
      aria-label="Terra.date.input.monthLabel"
      className="month-select is-placeholder"
      disabled={false}
      name="terra-date-month-date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      value=""
    >
      <option
        hidden={true}
        value=""
      >
        Terra.date.input.monthPlaceholder
      </option>
      <option
        key="Terra.date.input.january"
        value="01"
      >
        Terra.date.input.january
      </option>
      <option
        key="Terra.date.input.february"
        value="02"
      >
        Terra.date.input.february
      </option>
      <option
        key="Terra.date.input.march"
        value="03"
      >
        Terra.date.input.march
      </option>
      <option
        key="Terra.date.input.april"
        value="04"
      >
        Terra.date.input.april
      </option>
      <option
        key="Terra.date.input.may"
        value="05"
      >
        Terra.date.input.may
      </option>
      <option
        key="Terra.date.input.june"
        value="06"
      >
        Terra.date.input.june
      </option>
      <option
        key="Terra.date.input.july"
        value="07"
      >
        Terra.date.input.july
      </option>
      <option
        key="Terra.date.input.august"
        value="08"
      >
        Terra.date.input.august
      </option>
      <option
        key="Terra.date.input.september"
        value="09"
      >
        Terra.date.input.september
      </option>
      <option
        key="Terra.date.input.october"
        value="10"
      >
        Terra.date.input.october
      </option>
      <option
        key="Terra.date.input.november"
        value="11"
      >
        Terra.date.input.november
      </option>
      <option
        key="Terra.date.input.december"
        value="12"
      >
        Terra.date.input.december
      </option>
    </select>
  </div>
  <Input
    aria-label="Terra.date.input.dayLabel"
    autoComplete="off"
    className="date-input-day"
    disabled={false}
    isIncomplete={false}
    isInvalid={false}
    maxLength="2"
    name="terra-date-day-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="Terra.date.input.dayPlaceholder"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value=""
  />
  <Input
    aria-label="Terra.date.input.yearLabel"
    autoComplete="off"
    className="date-input-year"
    disabled={false}
    isIncomplete={false}
    isInvalid={false}
    maxLength="4"
    name="terra-date-year-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="Terra.date.input.yearPlaceholder"
    refCallback={[Function]}
    required={false}
    size="4"
    type="text"
    value=""
  />
</div>
`;

exports[`DateInput should render a default date input 1`] = `
<div
  className="date-input"
>
  <input
    name="date-input"
    type="hidden"
    value=""
  />
  <div
    className="month-select-wrapper"
  >
    <select
      aria-label="Terra.date.input.monthLabel"
      className="month-select is-placeholder"
      disabled={false}
      name="terra-date-month-date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      value=""
    >
      <option
        hidden={true}
        value=""
      >
        Terra.date.input.monthPlaceholder
      </option>
      <option
        key="Terra.date.input.january"
        value="01"
      >
        Terra.date.input.january
      </option>
      <option
        key="Terra.date.input.february"
        value="02"
      >
        Terra.date.input.february
      </option>
      <option
        key="Terra.date.input.march"
        value="03"
      >
        Terra.date.input.march
      </option>
      <option
        key="Terra.date.input.april"
        value="04"
      >
        Terra.date.input.april
      </option>
      <option
        key="Terra.date.input.may"
        value="05"
      >
        Terra.date.input.may
      </option>
      <option
        key="Terra.date.input.june"
        value="06"
      >
        Terra.date.input.june
      </option>
      <option
        key="Terra.date.input.july"
        value="07"
      >
        Terra.date.input.july
      </option>
      <option
        key="Terra.date.input.august"
        value="08"
      >
        Terra.date.input.august
      </option>
      <option
        key="Terra.date.input.september"
        value="09"
      >
        Terra.date.input.september
      </option>
      <option
        key="Terra.date.input.october"
        value="10"
      >
        Terra.date.input.october
      </option>
      <option
        key="Terra.date.input.november"
        value="11"
      >
        Terra.date.input.november
      </option>
      <option
        key="Terra.date.input.december"
        value="12"
      >
        Terra.date.input.december
      </option>
    </select>
  </div>
  <Input
    aria-label="Terra.date.input.dayLabel"
    autoComplete="off"
    className="date-input-day"
    disabled={false}
    isIncomplete={false}
    isInvalid={false}
    maxLength="2"
    name="terra-date-day-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="Terra.date.input.dayPlaceholder"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value=""
  />
  <Input
    aria-label="Terra.date.input.yearLabel"
    autoComplete="off"
    className="date-input-year"
    disabled={false}
    isIncomplete={false}
    isInvalid={false}
    maxLength="4"
    name="terra-date-year-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="Terra.date.input.yearPlaceholder"
    refCallback={[Function]}
    required={false}
    size="4"
    type="text"
    value=""
  />
</div>
`;

exports[`DateInput should render a disabled time input 1`] = `
<div
  className="disabled date-input"
>
  <input
    name="date-input"
    type="hidden"
    value=""
  />
  <div
    className="month-select-wrapper disabled"
  >
    <select
      aria-label="Terra.date.input.monthLabel"
      className="month-select is-placeholder disabled"
      disabled={true}
      name="terra-date-month-date-input"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      value=""
    >
      <option
        hidden={true}
        value=""
      >
        Terra.date.input.monthPlaceholder
      </option>
      <option
        key="Terra.date.input.january"
        value="01"
      >
        Terra.date.input.january
      </option>
      <option
        key="Terra.date.input.february"
        value="02"
      >
        Terra.date.input.february
      </option>
      <option
        key="Terra.date.input.march"
        value="03"
      >
        Terra.date.input.march
      </option>
      <option
        key="Terra.date.input.april"
        value="04"
      >
        Terra.date.input.april
      </option>
      <option
        key="Terra.date.input.may"
        value="05"
      >
        Terra.date.input.may
      </option>
      <option
        key="Terra.date.input.june"
        value="06"
      >
        Terra.date.input.june
      </option>
      <option
        key="Terra.date.input.july"
        value="07"
      >
        Terra.date.input.july
      </option>
      <option
        key="Terra.date.input.august"
        value="08"
      >
        Terra.date.input.august
      </option>
      <option
        key="Terra.date.input.september"
        value="09"
      >
        Terra.date.input.september
      </option>
      <option
        key="Terra.date.input.october"
        value="10"
      >
        Terra.date.input.october
      </option>
      <option
        key="Terra.date.input.november"
        value="11"
      >
        Terra.date.input.november
      </option>
      <option
        key="Terra.date.input.december"
        value="12"
      >
        Terra.date.input.december
      </option>
    </select>
  </div>
  <Input
    aria-label="Terra.date.input.dayLabel"
    autoComplete="off"
    className="date-input-day"
    disabled={true}
    isIncomplete={false}
    isInvalid={false}
    maxLength="2"
    name="terra-date-day-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="Terra.date.input.dayPlaceholder"
    refCallback={[Function]}
    required={false}
    size="2"
    type="text"
    value=""
  />
  <Input
    aria-label="Terra.date.input.yearLabel"
    autoComplete="off"
    className="date-input-year"
    disabled={true}
    isIncomplete={false}
    isInvalid={false}
    maxLength="4"
    name="terra-date-year-date-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    pattern="\\\\d*"
    placeholder="Terra.date.input.yearPlaceholder"
    refCallback={[Function]}
    required={false}
    size="4"
    type="text"
    value=""
  />
</div>
`;
